pocketpy/pocketpy.h


typedef struct py_OpaqueName py_OpaqueName;
typedef py_OpaqueName* py_Name;
typedef struct py_TValue py_TValue;
typedef int16_t py_Type;
typedef int64_t py_i64;
typedef double py_f64;
typedef void (*py_Dtor)(void*);
typedef struct py_TValue {
    py_Type type;
    bool is_ptr;
    int extra;
    union {
        int64_t _i64;
        char _chars[16];
    };
} py_TValue;
typedef struct c11_sv {
    const char* data;
    int size;
} c11_sv;
typedef py_TValue* py_Ref;
typedef py_TValue* py_ObjectRef;
typedef py_TValue* py_GlobalRef;
typedef py_TValue* py_StackRef;
typedef py_TValue* py_ItemRef;
typedef py_TValue* py_OutRef;
typedef struct py_Frame py_Frame;
typedef bool (*py_CFunction)(int argc, py_StackRef argv) PY_RAISE PY_RETURN;
PK_API py_Name py_name(const char*);
PK_API py_GlobalRef py_name2ref(py_Name);
PK_API py_Name py_namev(c11_sv);
PK_API c11_sv py_name2sv(py_Name);
PK_API void py_bind(py_Ref obj, const char* sig, py_CFunction f);
PK_API void py_bindmethod(py_Type type, const char* name, py_CFunction f);
PK_API void py_bindstaticmethod(py_Type type, const char* name, py_CFunction f);
PK_API void py_bindfunc(py_Ref obj, const char* name, py_CFunction f);
PK_API void
    py_bindproperty(py_Type type, const char* name, py_CFunction getter, py_CFunction setter);
PK_API void py_bindmagic(py_Type type, py_Name name, py_CFunction f);
PK_API py_i64 py_toint(py_Ref);
PK_API void* py_totrivial(py_Ref);
PK_API py_f64 py_tofloat(py_Ref);
PK_API bool py_castfloat(py_Ref, py_f64* out) PY_RAISE;
PK_API bool py_castfloat32(py_Ref, float* out) PY_RAISE;
PK_API bool py_castint(py_Ref, py_i64* out) PY_RAISE;
PK_API bool py_tobool(py_Ref);
PK_API py_Type py_totype(py_Ref);
PK_API void* py_touserdata(py_Ref);
PK_API const char* py_tostr(py_Ref);
PK_API const char* py_tostrn(py_Ref, int* size);
PK_API c11_sv py_tosv(py_Ref);
PK_API unsigned char* py_tobytes(py_Ref, int* size);
PK_API void py_bytes_resize(py_Ref, int size);
PK_API py_Type py_newtype(const char* name, py_Type base, const py_GlobalRef module, py_Dtor dtor);
PK_API bool py_istype(py_Ref, py_Type);
PK_API py_Type py_typeof(py_Ref self);
PK_API bool py_isinstance(py_Ref obj, py_Type type);
PK_API bool py_issubclass(py_Type derived, py_Type base);
PK_API py_Type py_gettype(const char* module, py_Name name);
PK_API bool py_checktype(py_Ref self, py_Type type) PY_RAISE;
PK_API bool py_checkinstance(py_Ref self, py_Type type) PY_RAISE;
PK_API PK_DEPRECATED py_GlobalRef py_tpgetmagic(py_Type type, py_Name name);
PK_API py_GlobalRef py_tpfindmagic(py_Type, py_Name name);
PK_API py_ItemRef py_tpfindname(py_Type, py_Name name);
PK_API py_Type py_tpbase(py_Type type);
PK_API py_GlobalRef py_tpobject(py_Type type);
PK_API const char* py_tpname(py_Type type);
PK_API void py_tpsetfinal(py_Type type);
PK_API void py_tphookattributes(py_Type type,
                                bool (*getattribute)(py_Ref self, py_Name name) PY_RAISE PY_RETURN,
                                bool (*setattribute)(py_Ref self, py_Name name, py_Ref val)
                                    PY_RAISE PY_RETURN,
                                bool (*delattribute)(py_Ref self, py_Name name) PY_RAISE,
                                bool (*getunboundmethod)(py_Ref self, py_Name name) PY_RETURN);
PK_API py_StackRef py_inspect_currentfunction();
PK_API py_GlobalRef py_inspect_currentmodule();
PK_API py_Frame* py_inspect_currentframe();
PK_API void py_newglobals(py_OutRef);
PK_API void py_newlocals(py_OutRef);
PK_API py_GlobalRef py_getreg(int i);
PK_API void py_setreg(int i, py_Ref val);
PK_API py_GlobalRef py_retval();
PK_API py_ItemRef py_getdict(py_Ref self, py_Name name);
PK_API void py_setdict(py_Ref self, py_Name name, py_Ref val);
PK_API bool py_deldict(py_Ref self, py_Name name);
PK_API py_ItemRef py_emplacedict(py_Ref self, py_Name name);
PK_API bool
    py_applydict(py_Ref self, bool (*f)(py_Name name, py_Ref val, void* ctx), void* ctx) PY_RAISE;
PK_API void py_cleardict(py_Ref self);
PK_API py_ObjectRef py_getslot(py_Ref self, int i);
PK_API void py_setslot(py_Ref self, int i, py_Ref val);
PK_API py_ItemRef py_getbuiltin(py_Name name);
PK_API py_ItemRef py_getglobal(py_Name name);
PK_API void py_setglobal(py_Name name, py_Ref val);
PK_API py_StackRef py_peek(int i);
PK_API void py_push(py_Ref src);
PK_API void py_pushnil();
PK_API void py_pushnone();
PK_API void py_pushname(py_Name name);
PK_API void py_pop();
PK_API void py_shrink(int n);
PK_API py_StackRef py_pushtmp();
PK_API bool py_pushmethod(py_Name name);
PK_API bool py_pusheval(const char* expr, py_GlobalRef module) PY_RAISE;
PK_API bool py_vectorcall(uint16_t argc, uint16_t kwargc) PY_RAISE PY_RETURN;
PK_API bool py_call(py_Ref f, int argc, py_Ref argv) PY_RAISE PY_RETURN;
PK_API bool py_tpcall(py_Type type, int argc, py_Ref argv) PY_RAISE PY_RETURN;
PK_API bool py_callcfunc(py_CFunction f, int argc, py_Ref argv) PY_RAISE PY_RETURN;
#define py_callcfunc(f, argc, argv) (f((argc), (argv)))
PK_API bool py_binaryop(py_Ref lhs, py_Ref rhs, py_Name op, py_Name rop) PY_RAISE PY_RETURN;
PK_API bool py_binaryadd(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_binarysub(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_binarymul(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_binarytruediv(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_binaryfloordiv(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_binarymod(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_binarypow(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_binarylshift(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_binaryrshift(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_binaryand(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_binaryor(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_binaryxor(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_binarymatmul(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_eq(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_ne(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_lt(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_le(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_gt(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_ge(py_Ref lhs, py_Ref rhs) PY_RAISE PY_RETURN;
PK_API bool py_isidentical(py_Ref, py_Ref);
PK_API int py_bool(py_Ref val) PY_RAISE;
PK_API int py_equal(py_Ref lhs, py_Ref rhs) PY_RAISE;
PK_API int py_less(py_Ref lhs, py_Ref rhs) PY_RAISE;
PK_API bool py_callable(py_Ref val);
PK_API bool py_hash(py_Ref, py_i64* out) PY_RAISE;
PK_API bool py_iter(py_Ref) PY_RAISE PY_RETURN;
PK_API int py_next(py_Ref) PY_RAISE PY_RETURN;
PK_API bool py_str(py_Ref val) PY_RAISE PY_RETURN;
PK_API bool py_repr(py_Ref val) PY_RAISE PY_RETURN;
PK_API bool py_len(py_Ref val) PY_RAISE PY_RETURN;
#define TypeError(...) py_exception(tp_TypeError, __VA_ARGS__)
PK_API bool StopIteration() PY_RAISE;
PK_API bool
    py_dict_apply(py_Ref self, bool (*f)(py_Ref key, py_Ref val, void* ctx), void* ctx) PY_RAISE;
enum py_PredefinedType {
    tp_nil = 0,
    tp_object = 1,
    tp_type,  
    tp_int,
    tp_float,
    tp_bool,
    tp_str,
    tp_str_iterator,
    tp_list,            
    tp_tuple,           
    tp_list_iterator,   
    tp_tuple_iterator,  
    tp_slice,           
    tp_range,
    tp_range_iterator,
    tp_module,
    tp_function,
    tp_nativefunc,
    tp_boundmethod,  
    tp_super,        
    tp_BaseException,
    tp_Exception,
    tp_bytes,
    tp_namedict,
    tp_locals,
    tp_code,
    tp_dict,
    tp_dict_iterator,  
    tp_property,       
    tp_star_wrapper,   
    tp_staticmethod,   
    tp_classmethod,    
    tp_NoneType,
    tp_NotImplementedType,
    tp_ellipsis,
    tp_generator,
    tp_SystemExit,
    tp_KeyboardInterrupt,
    tp_StopIteration,
    tp_SyntaxError,
    tp_RecursionError,
    tp_OSError,
    tp_NotImplementedError,
    tp_TypeError,
    tp_IndexError,
    tp_ValueError,
    tp_RuntimeError,
    tp_TimeoutError,
    tp_ZeroDivisionError,
    tp_NameError,
    tp_UnboundLocalError,
    tp_AttributeError,
    tp_ImportError,
    tp_AssertionError,
    tp_KeyError,
    tp_stdc_Memory,
    tp_stdc_Char, tp_stdc_UChar,
    tp_stdc_Short, tp_stdc_UShort,
    tp_stdc_Int, tp_stdc_UInt,
    tp_stdc_Long, tp_stdc_ULong,
    tp_stdc_LongLong, tp_stdc_ULongLong,
    tp_stdc_Float, tp_stdc_Double,
    tp_stdc_Pointer,
    tp_stdc_Bool,
    tp_vec2,
    tp_vec3,
    tp_vec2i,
    tp_vec3i,
    tp_mat3x3,
    tp_color32,
    tp_array2d_like,
    tp_array2d_like_iterator,
    tp_array2d,
    tp_array2d_view,
    tp_chunked_array2d,
};