pocketpy.odin


	/// Convert a name to a python `str` object with cache.
	py_name2ref :: proc(py_Name) -> py_GlobalRef ---

	/// Convert a `c11_sv` to a name.
	py_namev :: proc(c11_sv) -> py_Name ---

	/// Convert a name to a `c11_sv`.
	py_name2sv :: proc(py_Name) -> c11_sv ---

	/// Bind a function to the object via "decl-based" style.
	/// @param obj the target object.
	/// @param sig signature of the function. e.g. `add(x, y)`.
	/// @param f function to bind.
	py_bind :: proc(obj: py_Ref, sig: cstring, f: i32) ---

	/// Bind a method to type via "argc-based" style.
	/// @param type the target type.
	/// @param name name of the method.
	/// @param f function to bind.
	py_bindmethod :: proc(type: py_Type, name: cstring, f: i32) ---

	/// Bind a static method to type via "argc-based" style.
	/// @param type the target type.
	/// @param name name of the method.
	/// @param f function to bind.
	py_bindstaticmethod :: proc(type: py_Type, name: cstring, f: i32) ---

	/// Bind a function to the object via "argc-based" style.
	/// @param obj the target object.
	/// @param name name of the function.
	/// @param f function to bind.
	py_bindfunc :: proc(obj: py_Ref, name: cstring, f: i32) ---

	/// Bind a property to type.
	/// @param type the target type.
	/// @param name name of the property.
	/// @param getter getter function.
	/// @param setter setter function. Use `NULL` if not needed.
	py_bindproperty :: proc(type: py_Type, name: cstring, getter: i32, setter: i32) ---

	/// Bind a magic method to type.
	py_bindmagic :: proc(type: py_Type, name: py_Name, f: i32) ---

	/// Convert an `int` object in python to `int64_t`.
	py_toint :: proc(py_Ref) -> py_i64 ---

	/// Get the address of the trivial value object (16 bytes).
	py_totrivial :: proc(py_Ref) -> rawptr ---

	/// Convert a `float` object in python to `double`.
	py_tofloat :: proc(py_Ref) -> py_f64 ---

	/// Cast a `int` or `float` object in python to `double`.
	/// If successful, return true and set the value to `out`.
	/// Otherwise, return false and raise `TypeError`.
	py_castfloat :: proc() -> i32 ---

	/// 32-bit version of `py_castfloat`.
	py_castfloat32 :: proc() -> i32 ---

	/// Cast a `int` object in python to `int64_t`.
	py_castint :: proc() -> i32 ---

	/// Convert a `bool` object in python to `bool`.
	py_tobool :: proc() -> i32 ---

	/// Convert a `type` object in python to `py_Type`.
	py_totype :: proc(py_Ref) -> py_Type ---

	/// Convert a user-defined object to its userdata.
	py_touserdata :: proc(py_Ref) -> rawptr ---

	/// Convert a `str` object in python to null-terminated string.
	py_tostr :: proc(py_Ref) -> cstring ---

	/// Convert a `str` object in python to char array.
	py_tostrn :: proc(_: py_Ref, size: ^i32) -> cstring ---

	/// Convert a `str` object in python to `c11_sv`.
	py_tosv :: proc(py_Ref) -> c11_sv ---

	/// Convert a `bytes` object in python to char array.
	py_tobytes :: proc(_: py_Ref, size: ^i32) -> ^u8 ---

	/// Resize a `bytes` object. It can only be resized down.
	py_bytes_resize :: proc(_: py_Ref, size: i32) ---

	/// Create a new type.
	/// @param name name of the type.
	/// @param base base type.
	/// @param module module where the type is defined. Use `NULL` for built-in types.
	/// @param dtor destructor function. Use `NULL` if not needed.
	py_newtype :: proc(name: cstring, base: py_Type, module: py_GlobalRef, dtor: py_Dtor) -> py_Type ---

	/// Check if the object is exactly the given type.
	py_istype :: proc() -> i32 ---

	/// Get the type of the object.
	py_typeof :: proc(self: py_Ref) -> py_Type ---

	/// Check if the object is an instance of the given type.
	py_isinstance :: proc() -> i32 ---

	/// Check if the derived type is a subclass of the base type.
	py_issubclass :: proc() -> i32 ---

	/// Get type by module and name. e.g. `py_gettype("time", py_name("struct_time"))`.
	/// Return `0` if not found.
	py_gettype :: proc(module: cstring, name: py_Name) -> py_Type ---

	/// Check if the object is an instance of the given type exactly.
	/// Raise `TypeError` if the check fails.
	py_checktype :: proc(ref: py_Ref, type: py_Type) -> i32 ---

	/// Check if the object is an instance of the given type or its subclass.
	/// Raise `TypeError` if the check fails.
	py_checkinstance :: proc() -> i32 ---

	/// Get the magic method from the given type only.
	/// Return `nil` if not found.
	py_tpgetmagic :: proc(type: py_Type, name: py_Name) -> py_GlobalRef ---

	/// Search the magic method from the given type to the base type.
	/// Return `NULL` if not found.
	py_tpfindmagic :: proc(_: py_Type, name: py_Name) -> py_GlobalRef ---

	/// Search the name from the given type to the base type.
	/// Return `NULL` if not found.
	py_tpfindname :: proc(_: py_Type, name: py_Name) -> py_ItemRef ---

	/// Get the base type of the given type.
	py_tpbase :: proc(type: py_Type) -> py_Type ---

	/// Get the type object of the given type.
	py_tpobject :: proc(type: py_Type) -> py_GlobalRef ---

	/// Get the type name.
	py_tpname :: proc(type: py_Type) -> cstring ---

	/// Disable the type for subclassing.
	py_tpsetfinal :: proc(type: py_Type) ---

	/// Set attribute hooks for the given type.
	py_tphookattributes :: proc(type: py_Type, getattribute: proc "c" (py_Ref, py_Name) -> i32, setattribute: proc "c" (py_Ref, py_Name, py_Ref) -> i32, delattribute: proc "c" (py_Ref, py_Name) -> i32, getunboundmethod: proc "c" (py_Ref, py_Name) -> i32) ---

	/// Get the current `function` object on the stack.
	/// Return `NULL` if not available.
	/// NOTE: This function should be placed at the beginning of your decl-based bindings.
	py_inspect_currentfunction :: proc() -> py_StackRef ---

	/// Get the current `module` object where the code is executed.
	/// Return `NULL` if not available.
	py_inspect_currentmodule :: proc() -> py_GlobalRef ---

	/// Get the current frame object.
	/// Return `NULL` if not available.
	py_inspect_currentframe :: proc() -> ^py_Frame ---

	/// Python equivalent to `globals()`.
	py_newglobals :: proc(py_OutRef) ---

	/// Python equivalent to `locals()`.
	py_newlocals :: proc(py_OutRef) ---

	/// Get the i-th register.
	/// All registers are located in a contiguous memory.
	py_getreg :: proc(i: i32) -> py_GlobalRef ---

	/// Set the i-th register.
	py_setreg :: proc(i: i32, val: py_Ref) ---

	/// Get the last return value.
	/// Please note that `py_retval()` cannot be used as input argument.
	py_retval :: proc() -> py_GlobalRef ---

	/// Get an item from the object's `__dict__`.
	/// Return `NULL` if not found.
	py_getdict :: proc(self: py_Ref, name: py_Name) -> py_ItemRef ---

	/// Set an item to the object's `__dict__`.
	py_setdict :: proc(self: py_Ref, name: py_Name, val: py_Ref) ---

	/// Delete an item from the object's `__dict__`.
	/// Return `true` if the deletion is successful.
	py_deldict :: proc() -> i32 ---

	/// Prepare an insertion to the object's `__dict__`.
	py_emplacedict :: proc(self: py_Ref, name: py_Name) -> py_ItemRef ---

	/// Apply a function to all items in the object's `__dict__`.
	/// Return `true` if the function is successful for all items.
	/// NOTE: Be careful if `f` modifies the object's `__dict__`.
	py_applydict :: proc() -> i32 ---

	/// Clear the object's `__dict__`. This function is dangerous.
	py_cleardict :: proc(self: py_Ref) ---

	/// Get the i-th slot of the object.
	/// The object must have slots and `i` must be in valid range.
	py_getslot :: proc(self: py_Ref, i: i32) -> py_ObjectRef ---

	/// Set the i-th slot of the object.
	py_setslot :: proc(self: py_Ref, i: i32, val: py_Ref) ---

	/// Get variable in the `builtins` module.
	py_getbuiltin :: proc(name: py_Name) -> py_ItemRef ---

	/// Get variable in the `__main__` module.
	py_getglobal :: proc(name: py_Name) -> py_ItemRef ---

	/// Set variable in the `__main__` module.
	py_setglobal :: proc(name: py_Name, val: py_Ref) ---

	/// Get the i-th object from the top of the stack.
	/// `i` should be negative, e.g. (-1) means TOS.
	py_peek :: proc(i: i32) -> py_StackRef ---

	/// Push the object to the stack.
	py_push :: proc(src: py_Ref) ---

	/// Push a `nil` object to the stack.
	py_pushnil :: proc() ---

	/// Push a `None` object to the stack.
	py_pushnone :: proc() ---

	/// Push a `py_Name` to the stack. This is used for keyword arguments.
	py_pushname :: proc(name: py_Name) ---

	/// Pop an object from the stack.
	py_pop :: proc() ---

	/// Shrink the stack by n.
	py_shrink :: proc(n: i32) ---

	/// Get a temporary variable from the stack.
	py_pushtmp :: proc() -> py_StackRef ---

	/// Get the unbound method of the object.
	/// Assume the object is located at the top of the stack.
	/// If return true:  `[self] -> [unbound, self]`.
	/// If return false: `[self] -> [self]` (no change).
	py_pushmethod :: proc() -> i32 ---

	/// Evaluate an expression and push the result to the stack.
	/// This function is used for testing.
	py_pusheval :: proc() -> i32 ---

	/// Call a callable object via pocketpy's calling convention.
	/// You need to prepare the stack using the following format:
	/// `callable, self/nil, arg1, arg2, ..., k1, v1, k2, v2, ...`.
	/// `argc` is the number of positional arguments excluding `self`.
	/// `kwargc` is the number of keyword arguments.
	/// The result will be set to `py_retval()`.
	/// The stack size will be reduced by `2 + argc + kwargc * 2`.
	py_vectorcall :: proc(argc: u16, kwargc: u16) -> i32 ---

	/// Call a function.
	/// It prepares the stack and then performs a `vectorcall(argc, 0, false)`.
	/// The result will be set to `py_retval()`.
	/// The stack remains unchanged if successful.
	py_call :: proc() -> i32 ---

	/// Call a type to create a new instance.
	py_tpcall :: proc() -> i32 ---

	/// Call a `py_CFunction` in a safe way.
	/// This function does extra checks to help you debug `py_CFunction`.
	py_callcfunc :: proc() -> i32 ---

	/// Perform a binary operation.
	/// The result will be set to `py_retval()`.
	/// The stack remains unchanged after the operation.
	py_binaryop :: proc() -> i32 ---

	/// lhs + rhs
	py_binaryadd :: proc() -> i32 ---

	/// lhs - rhs
	py_binarysub :: proc() -> i32 ---

	/// lhs * rhs
	py_binarymul :: proc() -> i32 ---

	/// lhs / rhs
	py_binarytruediv :: proc() -> i32 ---

	/// lhs // rhs
	py_binaryfloordiv :: proc() -> i32 ---

	/// lhs % rhs
	py_binarymod :: proc() -> i32 ---

	/// lhs ** rhs
	py_binarypow :: proc() -> i32 ---

	/// lhs << rhs
	py_binarylshift :: proc() -> i32 ---

	/// lhs >> rhs
	py_binaryrshift :: proc() -> i32 ---

	/// lhs & rhs
	py_binaryand :: proc() -> i32 ---

	/// lhs | rhs
	py_binaryor :: proc() -> i32 ---

	/// lhs ^ rhs
	py_binaryxor :: proc() -> i32 ---

	/// lhs @ rhs
	py_binarymatmul :: proc() -> i32 ---

	/// lhs == rhs
	py_eq :: proc() -> i32 ---

	/// lhs != rhs
	py_ne :: proc() -> i32 ---

	/// lhs < rhs
	py_lt :: proc() -> i32 ---

	/// lhs <= rhs
	py_le :: proc() -> i32 ---

	/// lhs > rhs
	py_gt :: proc() -> i32 ---

	/// lhs >= rhs
	py_ge :: proc() -> i32 ---

	/// Python equivalent to `lhs is rhs`.
	py_isidentical :: proc() -> i32 ---

	/// Python equivalent to `bool(val)`.
	/// 1: true, 0: false, -1: error
	py_bool :: proc(val: py_Ref) -> i32 ---

	/// Compare two objects.
	/// 1: lhs == rhs, 0: lhs != rhs, -1: error
	py_equal :: proc(lhs: py_Ref, rhs: py_Ref) -> i32 ---

	/// Compare two objects.
	/// 1: lhs < rhs, 0: lhs >= rhs, -1: error
	py_less :: proc(lhs: py_Ref, rhs: py_Ref) -> i32 ---

	/// Python equivalent to `callable(val)`.
	py_callable :: proc() -> i32 ---

	/// Get the hash value of the object.
	py_hash :: proc() -> i32 ---

	/// Get the iterator of the object.
	py_iter :: proc() -> i32 ---

	/// Get the next element from the iterator.
	/// 1: success, 0: StopIteration, -1: error
	py_next :: proc(py_Ref) -> i32 ---

	/// Python equivalent to `str(val)`.
	py_str :: proc() -> i32 ---

	/// Python equivalent to `repr(val)`.
	py_repr :: proc() -> i32 ---

	/// Python equivalent to `len(val)`.
	py_len :: proc() -> i32 ---
